# InventoM

./: .gitignore  app.py  auth.py  data_manager.py  purge-credentials.sh  pyproject.toml  replit.md  requirements.txt  sheets_manager.py  utils.py  uv.lock.bak
data/: credentials.json  current_stock.csv  templates.csv  transactions.csv
